--- a/css/style.scss
+++ b/css/style.scss
@@ -44,7 +44,19 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
 }
 
 body {
-    margin: 12px 0 0 0;
+    margin: 0;
     font-family: "Roboto", sans-serif;
     background: #f6f6f6;
+}
+
+.header {
+    @include mobile {
+        padding-top: 15px;
+        text-align: center;
+        img {
+            padding: 10px;
+            width: 200px;
+        }
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    }
 }
