--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@
 $primary: #9356dc;
 $secondary: #ff79da;
 $tertiary: #99e2d0;
+$grey-color: #e8e8e8;
 
 $small-screen-up: 601px !default;
 $medium-screen-up: 993px !default;
@@ -58,5 +59,19 @@ body {
             width: 200px;
         }
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    }
+}
+
+.location {
+    @include mobile {
+        padding: 15px;
+        text-align: center;
+        background: $grey-color;
+        font-weight: bold;
+        color: rgb(49, 49, 49);
+
+        i {
+            margin-right: 10px;
+        }
     }
 }
