--- a/css/style.css
+++ b/css/style.css
@@ -31,4 +31,45 @@ body {
     margin-right: 10px;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .hero {
+    text-align: center;
+    background: #eeeeee;
+  }
+  .hero h1 {
+    padding-top: 28px;
+    font-weight: bold;
+    font-size: 25px;
+    margin: 0;
+  }
+  .hero h2 {
+    padding-top: 10px;
+    margin: 0;
+    font-size: 18px;
+    color: #696969;
+  }
+  .hero .button {
+    padding-top: 36px;
+    padding-bottom: 60px;
+  }
+  .hero .button a {
+    text-decoration: none;
+    cursor: pointer;
+    color: white;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356dc));
+    background-image: linear-gradient(#ff79da, #9356dc);
+    padding: 15px;
+    border-radius: 20px;
+    border: 0;
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+  .hero .button a:hover {
+    -webkit-box-shadow: 0 11px 15px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 11px 15px 0 rgba(0, 0, 0, 0.2);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ff9ee3), to(#a372df));
+    background-image: linear-gradient(#ff9ee3, #a372df);
+  }
+}
 /*# sourceMappingURL=style.css.map */
