--- a/css/style.scss
+++ b/css/style.scss
@@ -87,7 +87,7 @@ body {
             margin: 0;
         }
 
-        h2 {
+        .little {
             padding-top: 10px;
             margin: 0;
             font-size: 18px;
