--- a/css/style.scss
+++ b/css/style.scss
@@ -44,6 +44,18 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
     }
 }
 
+@keyframes heart-animation {
+    from {
+        fill: white;
+        stroke: black;
+    }
+    to {
+        stroke-width: 5;
+        stroke: black;
+        fill: $primary;
+    }
+}
+
 body {
     margin: 0;
     font-family: "Roboto", sans-serif;
@@ -170,9 +182,79 @@ body {
                         font-size: 25px;
                     }
                 }
-
-                
             }
         }
     }
 }
+
+.restaurant {
+    @include mobile {
+        h2 {
+            margin: 0;
+            margin-top: 50px;
+            margin-left: 10px;
+            font-size: 28px;
+        }
+
+        .list {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .card {
+                margin-top: 20px;
+                width: 90%;
+                border-radius: 10px;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+                .image {
+                    position: relative;
+                    img {
+                        width: 100%;
+                        height: 260px;
+                        object-fit: cover;
+                        border-radius: 10px 10px 0 0;
+                    }
+
+                    .new {
+                        position: absolute;
+                        right: 10px;
+                        top: 10px;
+                        padding: 10px;
+                        background: $tertiary;
+                        color: green;
+                        border-radius: 5px;
+                    }
+                }
+
+                .bottom {
+                    position: relative;
+                    padding: 10px;
+                    h3,
+                    span {
+                        margin: 0;
+                        margin-left: 10px;
+                    }
+                    .heart {
+                        svg {
+                            position: absolute;
+                            right: 10px;
+                            top: 30%;
+                            font-size: 30px;
+                            cursor: pointer;
+                            fill: rgb(255, 255, 255);
+                            width: 30px;
+                            stroke: black;
+                            stroke-width: 12px;
+
+                            &:hover {
+                                stroke: white;
+                                animation: heart-animation 1.5s forwards;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
