--- a/css/home.scss
+++ b/css/home.scss
@@ -1,48 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap");
-
-$primary: #9356dc;
-$secondary: #ff79da;
-$tertiary: #99e2d0;
-$grey-color: #e8e8e8;
-
-$small-screen-up: 601px !default;
-$medium-screen-up: 993px !default;
-$large-screen-up: 1201px !default;
-$small-screen: 600px !default;
-$medium-screen: 992px !default;
-$large-screen: 1200px !default;
-
-$medium-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
-$large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
-$extra-large-and-up: "only screen and (min-width : #{$large-screen-up})" !default;
-$small-and-down: "only screen and (max-width : #{$small-screen})" !default;
-$medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
-$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
-
-@mixin mobile {
-    @media #{$small-and-down} {
-        @content;
-    }
-}
-
-@mixin tablet {
-    @media #{$medium-and-up} {
-        @content;
-    }
-}
-
-@mixin large-desktop {
-    @media #{$extra-large-and-up} {
-        @content;
-    }
-}
-
-@mixin desktop {
-    @media #{$large-and-up} {
-        @content;
-    }
-}
+@import './global.scss';
 
 @keyframes heart-animation {
     from {
@@ -254,37 +210,6 @@ body {
                     }
                 }
             }
-        }
-    }
-}
-
-.footer {
-    background: #353535;
-    margin-top: 40px;
-    .logo {
-        font-family: "Shrikhand", cursive;
-        padding-top: 20px;
-        padding-left: 25px;
-        font-size: 20px;
-        color: white;
-    }
-    .navigation {
-        display: flex;
-        flex-direction: column;
-        font-weight: 300;
-        margin-left: 25px;
-        margin-top: 15px;
-        .text {
-            padding: 6px;
-            margin: 0;
-            font-size: 15px;
-        }
-        i {
-            margin-right: 10px;
-        }
-        a {
-            color: white;
-            text-decoration: none;
         }
     }
 }
