fix(front-end): add link

--- a/css/home.css
+++ b/css/home.css
@@ -236,6 +236,10 @@ body {
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
+  .restaurant .list .card a {
+    text-decoration: none;
+    color: black;
+  }
   .restaurant .list .card .image {
     position: relative;
   }
