--- a/css/home.scss
+++ b/css/home.scss
@@ -162,6 +162,12 @@ body {
                 width: 90%;
                 border-radius: 10px;
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+                a {
+                    text-decoration: none;
+                    color: black;
+                }
+
                 .image {
                     position: relative;
                     img {
