--- a/css/menu.css
+++ b/css/menu.css
@@ -40,4 +40,28 @@
   color: white;
   text-decoration: none;
 }
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.header img {
+  width: 250px;
+}
+
+.header i {
+  cursor: pointer;
+  position: absolute;
+  font-size: 25px;
+  left: 0;
+}
 /*# sourceMappingURL=menu.css.map */
