--- a/css/menu.css
+++ b/css/menu.css
@@ -41,7 +41,12 @@
   text-decoration: none;
 }
 
+body {
+  margin: 0;
+}
+
 .header {
+  padding: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -62,6 +67,13 @@
   cursor: pointer;
   position: absolute;
   font-size: 25px;
-  left: 0;
+  left: 10px;
+}
+
+.top-background img {
+  width: 100%;
+  height: 310px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 /*# sourceMappingURL=menu.css.map */
