--- a/css/menu.scss
+++ b/css/menu.scss
@@ -1,6 +1,11 @@
 @import "./global.scss";
 
+body {
+    margin: 0;
+}
+
 .header {
+    padding: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,6 +19,14 @@
         cursor: pointer;
         position: absolute;
         font-size: 25px;
-        left: 0;
+        left: 10px;
+    }
+}
+
+.top-background {
+    img {
+        width: 100%;
+        height: 310px;
+        object-fit: cover;
     }
 }
