--- a/css/home.css
+++ b/css/home.css
@@ -65,36 +65,64 @@
   }
 }
 
-@-webkit-keyframes slide-in-right {
-  0% {
-    -webkit-transform: translateX(1000px);
-            transform: translateX(1000px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes slide-in-right {
-  0% {
-    -webkit-transform: translateX(1000px);
-            transform: translateX(1000px);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-    opacity: 1;
-  }
-}
-
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
   background: #f6f6f6;
+}
+
+@-webkit-keyframes loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.loader {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  background: white;
+  width: 100%;
+  height: 100%;
+  -webkit-animation: loading 3s forwards;
+          animation: loading 3s forwards;
+}
+
+.loader .center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.loader .center img {
+  width: 300px;
+}
+
+.loader .center svg {
+  width: 100px;
+  height: 60px;
 }
 
 @media only screen and (max-width: 600px) {
