--- a/css/home.scss
+++ b/css/home.scss
@@ -1,9 +1,47 @@
-@import './global.scss';
+@import "./global.scss";
 
 body {
     margin: 0;
     font-family: "Roboto", sans-serif;
     background: #f6f6f6;
+}
+
+@keyframes loading {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.loader {
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    background: white;
+    width: 100%;
+    height: 100%;
+
+    animation: loading 3s forwards;
+
+    .center {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        img {
+            width: 300px;
+        }
+        svg {
+            width: 100px;
+            height: 60px;
+        }
+    }
 }
 
 .header {
