--- a/css/menu.scss
+++ b/css/menu.scss
@@ -110,7 +110,7 @@ body {
             display: flex;
             flex-direction: column;
             align-items: center;
-            
+
             .card {
                 overflow: hidden;
                 display: grid;
@@ -170,6 +170,29 @@ body {
                     position: relative;
                 }
             }
+        }
+    }
+}
+
+.button {
+    text-align: center;
+    padding-top: 36px;
+    a {
+        text-decoration: none;
+        cursor: pointer;
+        color: white;
+        background-image: linear-gradient(#ff79da, #9356dc);
+        font-weight: bold;
+        padding: 14px;
+        padding-left: 40px;
+        padding-right: 40px;
+        border-radius: 20px;
+        font-size: 15px;
+        border: 0;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        &:hover {
+            box-shadow: 0 11px 15px 0 rgba(0, 0, 0, 0.2);
+            background-image: linear-gradient(#ff9ee3, #a372df);
         }
     }
 }
