fix(front-end): title

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -69,6 +69,7 @@ body {
             padding-top: 20px;
             font-family: "Shrikhand", cursive;
             margin-left: 20px;
+            font-weight: 400;
         }
 
         .heart {
