--- a/css/menu.css
+++ b/css/menu.css
@@ -175,6 +175,7 @@ body {
   padding-top: 20px;
   font-family: "Shrikhand", cursive;
   margin-left: 20px;
+  font-weight: 400;
 }
 
 .menu .title .heart svg {
