--- a/css/home.css
+++ b/css/home.css
@@ -1,44 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap");
-.footer {
-  background: #353535;
-  margin-top: 40px;
-}
-
-.footer .logo {
-  font-family: "Shrikhand", cursive;
-  padding-top: 20px;
-  padding-left: 25px;
-  font-size: 20px;
-  color: white;
-}
-
-.footer .navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-weight: 300;
-  margin-left: 25px;
-  margin-top: 15px;
-}
-
-.footer .navigation .text {
-  padding: 6px;
-  margin: 0;
-  font-size: 15px;
-}
-
-.footer .navigation i {
-  margin-right: 10px;
-}
-
-.footer .navigation a {
-  color: white;
-  text-decoration: none;
+@media only screen and (max-width: 600px) {
+  .footer {
+    background: #353535;
+    margin-top: 40px;
+  }
+  .footer .logo {
+    font-family: "Shrikhand", cursive;
+    padding-top: 20px;
+    padding-left: 25px;
+    font-size: 20px;
+    color: white;
+  }
+  .footer .navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-weight: 300;
+    margin-left: 25px;
+    margin-top: 15px;
+  }
+  .footer .navigation .text {
+    padding: 6px;
+    margin: 0;
+    font-size: 15px;
+  }
+  .footer .navigation i {
+    margin-right: 10px;
+  }
+  .footer .navigation a {
+    color: white;
+    text-decoration: none;
+  }
 }
 
 @-webkit-keyframes heart-animation {
